WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
124191
Remote Layer Tree: Sporadic memory corruption during painting
https://bugs.webkit.org/show_bug.cgi?id=124191
Summary
Remote Layer Tree: Sporadic memory corruption during painting
Tim Horton
Reported
2013-11-11 23:42:53 PST
I half-flipped the logic of a condition but failed to flip the operators, causing us to overrun the bounds of cgPaintingRects.
Attachments
patch
(1.76 KB, patch)
2013-11-11 23:44 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
clarify changelog
(1.82 KB, patch)
2013-11-11 23:48 PST
,
Tim Horton
beidson
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2013-11-11 23:44:27 PST
Created
attachment 216642
[details]
patch
Tim Horton
Comment 2
2013-11-11 23:48:10 PST
Created
attachment 216643
[details]
clarify changelog
Tim Horton
Comment 3
2013-11-11 23:55:08 PST
http://trac.webkit.org/changeset/159098
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug